--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -2,7 +2,7 @@
 
 <div class="card mb-4">
   <div class="card-body">
-    <h5 class="card-title">Détails de l'événement</h5>
+    <h5 class="card-titles">Détails de l'événement</h5>
     
     <p class="card-text"><strong>Description:</strong> <%= @event.description %></p>
     <p class="card-text"><strong>Date de début:</strong> <%= @event.start_date.strftime("%d %b %Y %H:%M") %></p>
