--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,9 @@
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
 
+  <%= yield :head %>
+  <%= tag.link rel: "manifest", href: pwa_manifest_path(format: :json) %>
+
   <!-- Inclusion de Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 
