--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,7 @@
 
   <!-- Inclusion du fichier JavaScript principal -->
   <%= javascript_include_tag "application", "data-turbo-track": "reload" %>
+  <%= javascript_importmap_tags %>
 
 </head>
 
