--- a/app/views/devise/registrations/show.html.erb
+++ b/app/views/devise/registrations/show.html.erb
@@ -9,8 +9,11 @@
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
 
+
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+
+  <%= stylesheet_link_tag "show_profile", media: "all", "data-turbo-track": "reload" %>
 
   <!-- CSS principal -->
   <%= stylesheet_link_tag "application", media: "all", "data-turbo-track": "reload" %>
@@ -18,40 +21,6 @@
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;600&display=swap" rel="stylesheet">
 
-  <style>
-    body {
-      font-family: 'Nunito', sans-serif;
-      background-color: #f8f9fa;
-    }
-
-    .profile-card {
-      background: white;
-      border-radius: 12px;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-      padding: 30px;
-      text-align: center;
-      transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
-    }
-
-    .profile-card:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
-    }
-
-    .btn-custom {
-      background-color: #ecaacb;
-      color: rgb(0, 0, 0);
-      border-radius: 6px;
-      font-weight: bold;
-      padding: 10px 20px;
-      transition: background-color 0.3s ease;
-    }
-
-    .btn-custom:hover {
-      background-color: #4a0044;
-      color: white;
-    }
-  </style>
 </head>
 
 <body>
