--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,3 +1,4 @@
+<%= stylesheet_link_tag "styles" %>
 <h1 class="mb-4 text-center text-dark">Liste des événements</h1>
 
 <div class="row">
@@ -14,6 +15,7 @@
           <p class="card-text"><strong>Durée:</strong> <%= event.duration %> heures</p>
           <p class="card-text"><strong>Prix:</strong> <%= number_to_currency(event.price, unit: "€") %></p>
           <p class="card-text"><strong>Lieu:</strong> <%= event.location %></p>
+          <p class="card-text"><strong>Organisateur:</strong> <%= event.user.first_name %> <%= event.user.last_name %></p>
           
           <div class="d-flex justify-content-between align-items-center mt-3">
             <%= link_to "Voir l'événement", event_path(event), class: "btn btn-custom" %>
@@ -23,5 +25,3 @@
     </div>
   <% end %>
 </div>
-
-<%= stylesheet_link_tag "styles" %>
