--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -12,44 +12,11 @@
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 
-  <!-- CSS principal -->
-  <%= stylesheet_link_tag "application", media: "all", "data-turbo-track": "reload" %>
-
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;600&display=swap" rel="stylesheet">
 
-  <style>
-    body {
-      font-family: 'Nunito', sans-serif;
-      background-color: #f8f9fa;
-    }
+  <%= stylesheet_link_tag "show_event", media: "all", "data-turbo-track": "reload" %>
 
-    .event-card {
-      background: white;
-      border-radius: 12px;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-      transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
-    }
-
-    .event-card:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
-    }
-
-    .btn-custom {
-      background-color: #ecaacb;
-      color: rgb(0, 0, 0);
-      border-radius: 6px;
-      font-weight: bold;
-      padding: 10px 20px;
-      transition: background-color 0.3s ease;
-    }
-
-    .btn-custom:hover {
-      background-color: #4a0044;
-      color: white;
-    }
-  </style>
 </head>
 
 <body>
@@ -69,8 +36,16 @@
               <li><strong>Durée :</strong> <%= @event.duration %> heures</li>
               <li><strong>Prix :</strong> <%= @event.is_free? ? "Gratuit" : number_to_currency(@event.price, unit: "€") %></li>
               <li><strong>Lieu :</strong> <%= @event.location %></li>
+              <li><strong>Organisateur et contact :</strong> <%= @event.user.first_name %> <%= @event.user.last_name %>, <%= @event.user.email %></li>
             </ul>
           </div>
+
+          <div class="text-right mt-4">
+            <span class="badge bg-primary fs-5 px-4 py-2">
+              <%= @event.attendances.count %> <%= @event.attendances.count > 1 ? "participants" : "participant" %>
+            </span><br><br>
+          </div>
+
 
           <div class="text-center">
             <% if user_signed_in? %>
@@ -78,7 +53,7 @@
                 <% if @event.is_free? %>
                   <%= button_to "🎟️ Rejoindre gratuitement", attendances_path(event_id: @event.id), method: :post, class: "btn btn-custom me-3" %>
                 <% else %>
-                  <%= button_to "💳 Payer et rejoindre", checkout_create_path(total: @event.price, event_id: @event.id), method: :post, class: "btn btn-custom me-3" %>
+                  <%= button_to "💳 Payer et rejoindre", checkout_create_path(total: @event.price, event_id: @event.id), method: :post, class: "btn btn-custom me-3", data: { turbo: false } %>
                 <% end %>
               <% else %>
                 <p class="text-success fw-bold">✅ Tu es déjà inscrit.</p>
