--- a/app/views/devise/registrations/show.html.erb
+++ b/app/views/devise/registrations/show.html.erb
@@ -29,7 +29,7 @@
     <div class="row justify-content-center">
       <div class="col-md-6">
         <div class="profile-card">
-          <h1 class="mb-3 text-primary fw-bold">Mon Profil</h1>
+          <h1 class="mb-3 fw-bold">Mon Profil</h1>
 
           <p><strong>Prénom :</strong> <%= current_user.first_name %></p>
           <p><strong>Nom :</strong> <%= current_user.last_name %></p>
