--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,7 +36,7 @@
         <ul class="navbar-nav ms-auto">
           <% if user_signed_in? %>
             <li class="nav-item">
-              <%= link_to "Créer un événement", new_event_path, class: "btn btn-custom me-3" %>
+              <%= link_to "Créer un événement", new_event_path, class: "btn-custom" %>
             </li>
 
             <li class="nav-item">
