--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -24,7 +24,7 @@
 
   <div class="container mt-5">
     <div class="registration-card">
-      <h2 class="mb-4 text-center text-primary fw-bold">Inscription</h2>
+      <h2 class="mb-4 text-center fw-bold">Inscription</h2>
 
       <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: 'p-3' }) do |f| %>
         <%= render "devise/shared/error_messages", resource: resource %>
