--- a/app/views/events/my_events.html.erb
+++ b/app/views/events/my_events.html.erb
@@ -1,4 +1,6 @@
-<h3 class="text-primary fw-bold mb-4">📅 Mes Événements</h3>
+<%= stylesheet_link_tag "my_event", media: "all", "data-turbo-track": "reload" %>
+
+<h3 class="fw-bold mb-4">📅 Mes Événements</h3>
 
 <% if current_user.events.any? %>
   <% current_user.events.each do |event| %>
