--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -3,7 +3,7 @@
 
 <div class="row-event">
   <% @events.each do |event| %>
-    <div class="col-md-4 mb-4">
+    <div class="col-md-4-event mb-4">
       <div class="card shadow-sm custom-card-event">
         <div class="card-body flex-column">
           <h5 class="card-title-event text-center"><%= event.title %></h5>
