--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -15,11 +15,21 @@
           <p class="card-text-event"><strong>Durée:</strong> <%= event.duration %> heures</p>
           <p class="card-text-event"><strong>Prix:</strong> <%= number_to_currency(event.price, unit: "€") %></p>
           <p class="card-text-event"><strong>Lieu:</strong> <%= event.location %></p>
-          <p class="card-text-event"><strong>Organisateur:</strong> <%= event.user.first_name %> <%= event.user.last_name %></p>
           
+          <% if event.user.present? %>
+            <p class="card-text-event"><strong>Organisateur:</strong> <%= event.user.first_name %> <%= event.user.last_name %></p>
+          <% else %>
+            <p class="card-text-event"><strong>Organisateur:</strong> Inconnu</p>
+          <% end %>
+
           <div class="d-flex justify-content-between align-items-center mt-3">
             <%= link_to "Voir l'événement", event_path(event), class: "btn-custom" %>
           </div>
+
+          <% if current_user&.is_admin && !event.validated? %>
+            <%= button_to "Valider", validate_event_path(event), method: :patch, class: "btn btn-success" %>
+          <% end %>
+
         </div>
       </div>
     </div>
